# mlx-mamba3

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: benchmark.py  finetune_tinystories.py  generate.py  generate_hybrid.py
mlx_mamba_native/: __init__.py  cache.py  generate.py  model.py  train.py  weights.py
ref_mamba3/: mamba3.py
tests/: test_cache_chunking.py  test_hybrid.py  test_numerical.py  test_step_eq_prefill.py
